# sdl2_test_game_shooting

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  LICENSE  Makefile  Missile.h  Player.cpp  Player.h  README.md  Star.h  cmake_install.cmake  compile_commands.json  console_game  main.cpp
